# tasc_autonomy

./: .gitignore  README.md  lidar_mac.py  lidar_plot.py  log.csv  package.xml  test_autonomy_sensors.py
Log/: OrbbecSDK.log.txt
asimov_description/: ASIMOV_FINAL_v3.urdf  ASIMOV_FINAL_v3.xacro  README.md  gps.xacro  imu.xacro  lidar.xacro  orbbec_depth_camera.xacro  robot.urdf.xacro  ros2_control.xacro  ros2controls_controllers.yaml
autonomy_bringup/: package.xml  setup.py
autonomy_bringup/autonomy_bringup/: README.md  test.launch.py
autonomy_core/: package.xml  setup.cfg  setup.py
autonomy_sensors/: package.xml  setup.cfg  setup.py
autonomy_sensors/autonomy_sensors/: diff_drive_odom.py  gemini2_camera.py  gps_broadcaster.py  gps_imu_broadcaster.py  gps_node.py  gps_node_AS.py  imu_node.py
autonomy_sensors/firmware/: README.md  estimate_covariance_from_log.py  imuDMP_gps_serial.ino  imu_calibrated_serial_out_log.txt  imu_gps_serial.ino  log_serial_imu_gps.py
autonomy_sensors/firmware/imu_gps_simple/: imu_gps_simple.ino
autonomy_sensors/gps_tracker/: CMakeLists.txt  gps_tracker.launch  package.xml
autonomy_sensors/gps_tracker/launch/: gps_tracker.launch.py
autonomy_sensors/gps_tracker/src/: gps_publisher.cpp
autonomy_sensors/launch/: key_data_overlay.launch.py  sensors.launch.py  sensors_launch.py
autonomy_vision/: package.xml  setup.cfg  setup.py
autonomy_vision/autonomy_vision/: check_cam.py  display_heading.py  display_heading_imu.py  display_images.py  gst_arm_cam.py  morse_code_detector.py  motor_controller.py  multi_camera_streamer.py  new_pano_stitcher.py  panorama_stitcher.py  testdetection.py  webcam_detection2D.py
autonomy_vision/firmware/: simple_pano.py  simple_stitcher.py
autonomy_vision/firmware/simple_servo_serial/: simple_servo_serial.ino
autonomy_vision/launch/: detection.launch.py  motor.launch.py
giskard_description/: CMakeLists.txt
giskard_description/include/giskard_description/: README.md
giskard_description/launch/: display.launch.py  test.launch.py
giskard_description/src/: README.md
giskard_description/urdf/: giskard_base.xacro  orbbec_depth_camera.xacro
giskard_gazebo/: CMakeLists.txt
giskard_gazebo/launch/: sim.launch.py
install/: local_setup.sh  setup.sh
log/: latest_build
morse_gazebo/: CMakeLists.txt  package.xml
morse_gazebo/plugins/: morse_light_plugin.cpp
morse_gazebo/src/: morse_light_plugin.cpp  morse_light_plugin.cpp.save
panoCam/: README.md  package.xml  setup.cfg  setup.py
panoCam/panorama_scripts/: pan_controller.py
rover_morse_decoder/: package.xml  setup.cfg  setup.py
rover_morse_decoder/rover_morse_decoder/: morse_camera_decoder.py
scan_tools/: package.xml  setup.py
scan_tools/scan_tools/: scan_checker.py
tasc_autonomy/: .gitignore  README.md
tasc_autonomy/autonomy_sensors/: package.xml  setup.py
tasc_autonomy/autonomy_sensors/autonomy_sensors/: gemini2_camera.py  gps_imu_broadcaster.py  gps_node.py  gps_node_AS.py  imu_node.py
tasc_autonomy/autonomy_sensors/launch/: README.md  (+2 more)
tasc_autonomy/autonomy_vision/: package.xml  setup.py
tasc_autonomy/autonomy_vision/autonomy_vision/: morse_code_detector.py  motor_input.py  multi_camera_streamer.py  webcam_detection2D.py  yolo_depth_v1.py  yolo_pc.py
tasc_autonomy/autonomy_vision/launch/: gemini2_edited2.launch.py
tasc_autonomy/autonomy_vision/sketch_may15a/: sketch_may15a.ino
tasc_autonomy/giskard_gazebo/: CMakeLists.txt  package.xml
tasc_autonomy/gps_tracker/: CMakeLists.txt  package.xml
yolo11n_openvino_model/: metadata.yaml  yolo11n.xml
(+56 files in other folders)
